Fixed wrong color added for popover-foreground

--- a/next-app/src/app/globals.css
+++ b/next-app/src/app/globals.css
@@ -7,8 +7,8 @@
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.1371 0.036 258.53);
   --popover: oklch(1 0 0);
-  --popover-foreground: oklch(0.9838 0.0035 247.86);
-  --primary: oklch(0.4188 0.0711 209.74);
+  --popover-foreground: oklch(0.1371 0.036 258.53);
+  --primary: oklch(12.368% 0.00724 196.363);
   --primary-foreground: oklch(0.9838 0.0035 247.86);
   --secondary: oklch(0.5596 0.0058 17.33);
   --secondary-foreground: oklch(0.9838 0.0035 247.86);
@@ -51,12 +51,13 @@
   --color-input: var(--input);
   --color-ring: var(--ring);
 
-  /* Translated from old tailwind config, but seems to not be used and have no effect? */
-  --color-chart-1: hsl(var(--chart-1));
+  /* Translated from old tailwind config, but seems to not be used and have no effect?
+  Leave them commented out for now, as  */
+  /* --color-chart-1: hsl(var(--chart-1));
   --color-chart-2: hsl(var(--chart-2));
   --color-chart-3: hsl(var(--chart-3));
   --color-chart-4: hsl(var(--chart-4));
-  --color-chart-5: hsl(var(--chart-5));
+  --color-chart-5: hsl(var(--chart-5)); */
 
   --radius: var(--radius);
   --radius-lg: var(--radius);
